@@ -38,9 +38,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 @Configuration
 @EnableWebSecurity
@@ -55,31 +53,47 @@ public class SecurityConfig {
 
     @Value("${jwt.private.key}")
     private RSAPrivateKey privateKey;
+    @Value("${frontend.url}")
+    private String frontendUrl;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         // @formatter:off
         http
             .authorizeHttpRequests(authorize -> authorize
-                .requestMatchers("/api/v1/auth/login").permitAll()
-                .requestMatchers("/auth-test/public").permitAll()
+                .requestMatchers("/api/v1/auth/**").permitAll() // Allow all auth endpoints
+                .requestMatchers("/api/mock/**").permitAll()
                 .requestMatchers("/swagger-ui/**","v3/api-docs/**").permitAll()
+                .requestMatchers("/actuator/**").permitAll() // Allow actuator endpoints
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                .anyRequest().authenticated()
+                    .requestMatchers("/api/students/**").permitAll()
+                    .requestMatchers("/api/parents/**").permitAll()
+                    .requestMatchers("/api/vaccinations/**").permitAll()
+                    .requestMatchers("/api/health-profiles/**").permitAll()
+                    .requestMatchers("/api/medical-checkups/**").permitAll()
+                    .requestMatchers("/api/medication-instructions/**").permitAll()
+                    .requestMatchers("/api/usersController/**").permitAll()
+                    .requestMatchers("/api/medical-incidents/**").permitAll()
+
+
+
+                .anyRequest().permitAll()
             )
             .csrf(AbstractHttpConfigurer::disable)
-                .httpBasic(Customizer.withDefaults())
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-//            .oauth2Login(oauth2 -> oauth2.defaultSuccessUrl("/dashboard", true)
-//                .failureUrl("/login?error"))
+                .oauth2Login(oauth2Login -> oauth2Login
+                        .defaultSuccessUrl("/api/v1/auth/oauth2/success", true)
+                        .failureUrl("/api/v1/auth/oauth2/failure")
+                        .permitAll()
+                )
             .oauth2ResourceServer(oauth2 -> oauth2
                 .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter))
             )
-                .exceptionHandling(exceptions -> exceptions
-                        .authenticationEntryPoint(new BearerTokenAuthenticationEntryPoint())
-                        .accessDeniedHandler(new BearerTokenAccessDeniedHandler()))
+            .exceptionHandling(exceptions -> exceptions
+                .authenticationEntryPoint(new BearerTokenAuthenticationEntryPoint())
+                .accessDeniedHandler(new BearerTokenAccessDeniedHandler()))
             .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
             );
         // @formatter:on
 
@@ -89,17 +103,22 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedOriginPatterns(List.of("*")); // Allow all origins for development
+        configuration.setAllowedOrigins(Collections.singletonList(frontendUrl));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("*")); // Allow all headers
+        configuration.setAllowCredentials(true); // Allow credentials
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-//    @Bean
-//    public PasswordEncoder passwordEncoder() {
-//        return new BCryptPasswordEncoder();
-//    }
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
